simulation-scripts/scenario/cease-and-desist/apply/02-license-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rkls
  namespace: licensing
  labels:
    name: rkls
spec:
  serviceAccountName: reform-kube
  containers:
  - image: controlplaneoffsec/cease-and-desist:rks
    command: ["sleep", "2d"]
    name: rkls
    securityContext:
      allowPrivilegeEscalation: false
