simulation-scripts/scenario/cease-and-desist/apply/06-admin.yaml
apiVersion: v1
kind: Pod
metadata:
  name: admin-console
  labels:
    name: admin-console
  namespace: administration
spec:
  serviceAccountName: sysadmin
  containers:
  - name: admin-console
    image: ttl.sh/wakeward-215f35-adm-con:12h
    command: ["sleep", "2d"]
    imagePullPolicy: IfNotPresent
    securityContext:
      allowPrivilegeEscalation: false
