simulation-scripts/scenario/cease-and-desist/apply/04-cnp.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: dns-policy-test
  namespace: licensing
spec:
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: '*'
  - toFQDNs:
    - matchName: reform-kube.licensing.com.org.test.dev.io
    - matchName: deb.debian.org
    - matchPattern: '*.debian.org'
    - matchName: debian.map.fastlydns.net
    - matchName: packages.cloud.google.com
    - matchName: github.com
    - matchPattern: '*.github.com'
    - matchPattern: '*.githubusercontent.com'
    - matchName: control-plane.io
    - matchName: ident.me
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      - port: "80"
        protocol: TCP
  endpointSelector:
    matchLabels:
      k8s:name: admin-console
